# binary-reader

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md
include/binary_reader/: cloneable_unique_ptr.h  codecs.h  error.h  error_collection.h  file_object.h  file_parser.h  file_system.h  json.h  number.h  options.h  size.h  utf_string.h  value.h
src/: main.cc
src/app/: command_line.cc  command_line.h  main.cc
src/ast/: ast_base.h  field_info.cc  field_info.h  literal.cc  literal.h  option_set.cc  option_set.h  options.h  type_def.cc  type_def.h  type_definition.cc  type_definition.h  type_info.cc  type_info.h
src/parser/: AntlrBinary.g4  CMakeLists.txt  definition_parser.cc  definition_parser.h
src/public/: codecs.cc  error.cc  error_collection.cc  file_object.cc  file_object_init.h  file_parser.cc  file_system.cc  json.cc  number.cc  options.cc  utf_string.cc  value.cc
src/util/: buffered_file_reader.cc  buffered_file_reader.h  error_collection.cc  error_collection.h  macros.h  memory_file_system.cc  memory_file_system.h  size.h  templates.h
tests/: CMakeLists.txt  gtest_wrapper.h  mocks.h
tests/ast/: option_set_unittest.cc  type_info_unittest.cc
tests/parser/: binary_parser_unittest.cc  definition_parser_unittest.cc
tests/public/: codecs_unittest.cc  error_unittest.cc  file_object_unittest.cc  file_parser_integration.cc  file_system_unittest.cc  json_unittest.cc  number_unittest.cc  options_unittest.cc  value_unittest.cc
tests/util/: buffered_file_reader_unittest.cc  templates_unittest.cc
